--- a/HTML5-CSS3/style/style.css
+++ b/HTML5-CSS3/style/style.css
@@ -1,3 +1,8 @@
+body {
+    background-color: rgb(49, 49, 49);
+}
+
+
 #title, .subtitle, .post_title{
     color:darkcyan;
 }
@@ -5,5 +10,14 @@
 .post_title{
     font-size: 16 ;
     font-style: italic;
+    margin-bottom: 15px ;
+}
+
+.post{
+    background-color: antiquewhite;
+    padding: 15px;
+    border: 2px solid #505050;
+    margin-top: 15px;
+    border-radius: 5px;
 }
 
