--- a/Pokedex/assets/css/global.css
+++ b/Pokedex/assets/css/global.css
@@ -1,6 +1,7 @@
 
 * {
     font-family: 'Roboto',sans-serif;
+    box-sizing: border-box;
 }
 
 .content{
@@ -24,7 +25,15 @@ ol.pokemons li.grama{
     background-color: #14A06F;
     color:white;
     border-radius: 1rem;
+    display: flex;
+    flex-direction: column;
+
+}
+
+ol.pokemons li img{
+    max-width: 100%;
     height: 100px;
+    align-self: flex-end;
 }
 
 ol.pokemons li.fire{
@@ -33,5 +42,6 @@ ol.pokemons li.fire{
     background-color:firebrick;
     color:white;
     border-radius: 1rem;
-    height: 100px;
+    display: flex;
+    flex-direction: column;
 }
