--- a/Pokedex/assets/css/global.css
+++ b/Pokedex/assets/css/global.css
@@ -22,7 +22,28 @@ body{
     margin: 0;
 }
 
+.pagination{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    padding: 1rem;
 
+
+}
+.pagination button{
+    padding: .25rem .5rem;
+    margin: .25rem .5rem;
+    font-size: .625rem;
+    background-color: blueviolet;
+    color: #FFF;
+    border: none;
+    border-radius: 1rem;
+
+    
+
+}
 
 
 @media screen and (min-width: 992px){
