--- a/Angular/Services/src/app/components/card/card.component.css
+++ b/Angular/Services/src/app/components/card/card.component.css
@@ -21,6 +21,13 @@
     margin-left: auto;
     margin-right: auto;
     height: 75%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.card__body > img{
+   width:100%;
+
 }
 
 .card__stats{
