--- a/Angular/Services/src/app/components/card/card.component.html
+++ b/Angular/Services/src/app/components/card/card.component.html
@@ -1,17 +1,15 @@
-<div class="card">
+<div class="card" *ngFor="let p of pokemon">
     <div class="card__title">
-        <h3>{{name}}</h3>
+        <h3>{{pokemon.name}}</h3>
     </div>
     <div class="card__body">
-        <img src="" alt="pokemon" srcset="">
+        <img [src]="pokemon.sprites.front_default" alt="pokemon" srcset="">
     </div>
-    <div class="card__stats">
-        
+    <div class="card__stats">        
         <span 
             class="card__stats__type" 
-            *ngFor="let type of attributesTypes">
-            {{type}}
+            *ngFor="let t of pokemon.types">
+            {{t.type.name}}
         </span>
-        <span class="card__stats__type">{{attributesTypes[1]}}</span>
     </div>
 </div>
