concluindo estudos de services

--- a/Angular/Services/src/app/components/card/card.component.html
+++ b/Angular/Services/src/app/components/card/card.component.html
@@ -1,4 +1,5 @@
-<div class="card" *ngFor="let p of pokemon">
+<div class="card">
+    <input type="text" (input)="getPokemon($any($event.target).value)">
     <div class="card__title">
         <h3>{{pokemon.name}}</h3>
     </div>
