--- a/Angular/Services/src/app/components/card/card.component.css
+++ b/Angular/Services/src/app/components/card/card.component.css
@@ -8,6 +8,10 @@
     background-color: #232323;
     border-radius: 10px;
 }
+.card > input{
+    border-radius: 10px;
+    height: 25px;
+}
 .card__title{
     margin-left: auto;
     margin-right: auto;
